--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/application-5d17fb6b-5535-45b9-8264-1c3152143c80.apk" download="sbmobile">Установить</a>
+    <a href="https://drive.google.com/file/d/1y_MIf3AQNHmqL948dgsL_MnAuRYKWjDQ/view?usp=sharing">Установить</a>
 
     
 </body>
